[gd_scene load_steps=9 format=3 uid="uid://bis7h3ffd40dy"]

[ext_resource type="Script" uid="uid://usymdixmgddq" path="res://scripts/player.gd" id="1_v0iea"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_aqk2v"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tlwt5"]
height = 1.2

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_aqk2v"]
length = 0.5

[sub_resource type="Animation" id="Animation_aqk2v"]
resource_name = "Jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0436332, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_dwbse"]
resource_name = "Landing"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_036b0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dwbse"]
_data = {
&"Jump": SubResource("Animation_aqk2v"),
&"Landing": SubResource("Animation_dwbse"),
&"RESET": SubResource("Animation_036b0")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_v0iea")

[node name="standing_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_aqk2v")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.556979, 0)
shape = SubResource("CapsuleShape3D_tlwt5")
disabled = true

[node name="StepUpSeparationRay_F" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, -0.710818)
shape = SubResource("SeparationRayShape3D_aqk2v")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_F"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[node name="StepUpSeparationRay_L" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, -0.710818)
shape = SubResource("SeparationRayShape3D_aqk2v")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_L"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[node name="StepUpSeparationRay_R" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.5, -0.710818)
shape = SubResource("SeparationRayShape3D_aqk2v")

[node name="RayCast3D" type="RayCast3D" parent="StepUpSeparationRay_R"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
enabled = false
target_position = Vector3(0, -0.55, 0)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.017, 0)
target_position = Vector3(0, 2, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="CameraSmooth" type="Node3D" parent="Head"]
unique_name_in_owner = true

[node name="Eyes" type="Node3D" parent="Head/CameraSmooth"]

[node name="Camera3D" type="Camera3D" parent="Head/CameraSmooth/Eyes"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Head/CameraSmooth/Eyes/Camera3D"]
libraries = {
&"": SubResource("AnimationLibrary_dwbse")
}

[node name="StairsBelowRaycast3D" type="RayCast3D" parent="."]
target_position = Vector3(0, -0.5, 0)
